--- a/main.scss
+++ b/main.scss
@@ -419,57 +419,65 @@ img {
     }
 }
 
-.modal.modal-opened {
-    display: block;
-    overflow: scroll;
+/* The Modal (background) */
+.modal-wrap {
+    height: 100vh;
+    pointer-events: none;
+    position: fixed;
+    width: 100vw;
+    z-index: 100;
 
-    .modal-content {
-        width: 95vw;
-        max-width: 670px;
-        transition: 1s all;
-        transform: scale(1);
+    // display: block; /* Hidden by default */
+    // position: fixed; /* Stay in place */
+    // z-index: 1; /* Sit on top */
+    // left: 0;
+    // top: 0;
+    // width: 100%; /* Full width */
+    // height: 100%; /* Full height */
 
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
-        @media screen and (max-width: $screen-md-min) {
-            width: 100vw;
-            height: 100vh;
-            // margin: 0;
-            // padding: 0;
-
-            .modal__row--bottom {
-                position: fixed;
+    &.modal-opened {
+        display: block;
+        overflow: scroll;
+    
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0,0,0); /* Fallback color */
+        background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+    
+        .modal-content {
+            transition: all 1s;
+            transform: scale(1);
+            opacity: 1;
+    
+    
+            @media screen and (max-width: $screen-md-min) {
+                width: 100vw;
+                height: 100vh;
+    
+                .modal__row--bottom {
+                    position: fixed;
+                }
             }
         }
     }
-}
 
-/* The Modal (background) */
-.modal {
-    display: block; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
-
-
-
-        /* Modal Content/Box */
+    /* Modal Content/Box */
     .modal-content {
+        transform: scale(0.8);
+        transition: all 1s;
+        opacity: 0;
+
+        width: 95vw;
+        max-width: 670px;
         // display: inline;
         background-color: #fefefe;
         margin: 5% auto; /* 15% from the top and centered */
         padding: 20px;
         border: 2px solid #888;
-        
-        width: 0;
-        transition: 1s all;
-        transform: scale(1);
-
 
         figure {
             margin: -20px;
